aplique footer dentro de body
se rectifico el uso de etiquetas semanticas

--- a/hipervinculos/educacion.html
+++ b/hipervinculos/educacion.html
@@ -66,6 +66,14 @@
           <input type="submit" value="Enviar">
         </fieldset>
 </form>
+<footer>
+  <ul>
+    <h4>&copy;Derechos reservados
+      <li>Teléfono de contacto 7221561623</li>
+    <li>facebook/galeriaorientaltoluca/</li>
+    <li><a href="mailto:quantum2010@hotmail.com?subject=retroalimentacion">quantum2010@hotmail.com</a></li></h4>
+  </ul>
+</footer>
   </body>
-  
+
 </html>
