--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@ Logre colocar nuestra cadena Galería Oriental como la principal cadena de venta
   <li>Dominio del idioma Ingles <strong>90%</strong></li>
     <li>Dominio del idioma Español <strong>100%</strong></li>
 </ul>
+<footer>
+  <ul>
+    <h4>&copy;Derechos reservados
+      <li>Teléfono de contacto 7221561623</li>
+    <li>facebook/galeriaorientaltoluca/</li>
+    <li><a href="mailto:quantum2010@hotmail.com?subject=retroalimentacion">quantum2010@hotmail.com</a></li></h4>
+  </ul>
+</footer>
   </body>
-  
+
 </html>
