--- a/hipervinculos/experencia.html
+++ b/hipervinculos/experencia.html
@@ -30,6 +30,14 @@
       <h4>Audio pasatiempos</h4>
     <audio src="../audio/audiogustos.mp3"  preload="auto" controls>
     </audio>
+    <footer>
+      <ul>
+        <h4>&copy;Derechos reservados
+          <li>Teléfono de contacto 7221561623</li>
+        <li>facebook/galeriaorientaltoluca/</li>
+        <li><a href="mailto:quantum2010@hotmail.com?subject=retroalimentacion">quantum2010@hotmail.com</a></li></h4>
+      </ul>
+    </footer>
     </body>
-    
+
 </html>
